# flap

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
inc/glad/: glad.c  glad.h
src/: ConnectionService.h  KeyboardService.h  MainApplication.cpp  MainApplication.h  MainApplicationSettings.h  ShortcutService.h
src/managers/: AudioManager.cpp  AudioManager.h  GraphManager.cpp  GraphManager.h  Manager.h  MidiManager.cpp  MidiManager.h  ObjectManager.h
src/objects/: Object.cpp  Object.h
src/objects/adaptive/: EchoCanceller.cpp  EchoCanceller.h
src/objects/basic/: Envelope.cpp  Envelope.h  Gain.cpp  Gain.h
src/objects/dynamic/: Envelope.cpp  Envelope.h
src/objects/effects/: Chorus.cpp  Chorus.h  Flanger.cpp  Flanger.h  Phaser.cpp  Phaser.h
src/objects/generator/: SineGenerator.cpp  SineGenerator.h
src/objects/io/: AudioIn.cpp  AudioIn.h  AudioOut.cpp  AudioOut.h  KeyboardSimulator.cpp  KeyboardSimulator.h  MidiIn.cpp  MidiIn.h  Probe.cpp  Probe.h
src/objects/synths/: FlapSynth.cpp  FlapSynth.h
src/utilities/: BoolProxy.h
src/widgets/: Connector.cpp  Connector.h
test/: main.cpp  test.cpp
